2025-09-31 27
  * added option --commmand-timeout
  * fixed command timeout (bug #31)
  * added sd_notify() for systemd
  * bar-index: improved clean-orphaned: remove entities without
    entries or storages 
  * BARControl: improved certificate validation
  * BARControl: show file system type of devices if possible
  * BARControl: check common name of SSL certificate

2025-06-29 26
  * automatic replace deprecated configuration values by new value
  * support libsmb2 for Windows port
  * increased test code coverage
  * fixed some memory leaks
  * fixed handling optional command line options (isSet-operator)
  * fixed error handling when deleting .nobackup
  * upgraded SQLite to 3.49.1
  * bar-index: add option --purge-with-error
  * bar-index: renamed options --create-indizes, create-fts-indizes,
    drop-indizes
  * BACControl: upgrade to Java 1.7
  * BARControl: add total progress to test dialog
  * BARControl: add general commands to server settings dialog
  * BARControl: show busy dialog when deleting storages
  * BARControl: fixed bug #29: null pointer exception when adding
    filter rule
  * upgrade build+test docker base to Ubuntu 24.04
  * replaced support for CentOS by AlmaLinux

2025-01-31 25b
  * fixed write config values permission, owner
  * log next schedule
  * use ISO date/time as default format
  * fixed parse+format file permission string (bug #25)
  * fixed abort job with destination CD/DVD/BD with internal
    toolchain
  * BARControl: fixed abort restore: close dialog
  * BARControl: fixed restore dialog values

2024-11-01 25a
  * fixed key constrain failed on database import (bug #16)
  * fixed estimated rest tmie for database import (bug #17)
  * fixed delete storages on (sftp-) server (bug #21)
  * BARControl: fixed exception if server return an invalid
    size value (bug #15)
  * BARControl: fixed wrong stored pane sizes (bug #14)

2024-10-20 25
  * removed directory aggregate data from index: hardly used,
    save space and time